# VpnManager

./: .coverage  README.md  install.sh  main.py  project-structure.ini  projecttree.txt  pyproject.toml  setup.py  vpn_tui_dialogs.py
config/vpn_profiles/: ca-free-4.protonvpn.tcp.ovpn
vpn_manager/: _version.py
vpn_manager.egg-info/: SOURCES.txt  requires.txt
vpn_manager/cli/: interface.py
vpn_manager/core/: config_manager.py  ip_rotator.py  kill_switch.py  types.py  vpn_controller.py
vpn_manager/providers/: openvpn_client.py  wireguard_client.py
vpn_manager/ui/: __init__.py  app.py  dialogs.py
vpn_manager/utils/: logging_setup.py  network_tools.py  system_check.py
